--- a/package.json
+++ b/package.json
@@ -3,9 +3,69 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "static": "yarn build && next export"
   },
   "dependencies": {
+    "@instructure/emotion": "^8.14.0",
+    "@instructure/ui-alerts": "^8.14.0",
+    "@instructure/ui-avatar": "^8.14.0",
+    "@instructure/ui-badge": "^8.14.0",
+    "@instructure/ui-billboard": "^8.14.0",
+    "@instructure/ui-breadcrumb": "^8.14.0",
+    "@instructure/ui-buttons": "^8.14.0",
+    "@instructure/ui-byline": "^8.14.0",
+    "@instructure/ui-calendar": "^8.14.0",
+    "@instructure/ui-checkbox": "^8.14.0",
+    "@instructure/ui-date-input": "^8.14.0",
+    "@instructure/ui-date-time-input": "^8.14.0",
+    "@instructure/ui-drawer-layout": "^8.14.0",
+    "@instructure/ui-editable": "^8.14.0",
+    "@instructure/ui-file-drop": "^8.14.0",
+    "@instructure/ui-flex": "^8.14.0",
+    "@instructure/ui-form-field": "^8.14.0",
+    "@instructure/ui-grid": "^8.14.0",
+    "@instructure/ui-heading": "^8.14.0",
+    "@instructure/ui-icons": "^8.14.0",
+    "@instructure/ui-img": "^8.14.0",
+    "@instructure/ui-link": "^8.14.0",
+    "@instructure/ui-list": "^8.14.0",
+    "@instructure/ui-menu": "^8.14.0",
+    "@instructure/ui-metric": "^8.14.0",
+    "@instructure/ui-modal": "^8.14.0",
+    "@instructure/ui-navigation": "^8.14.0",
+    "@instructure/ui-number-input": "^8.14.0",
+    "@instructure/ui-options": "^8.14.0",
+    "@instructure/ui-overlays": "^8.14.0",
+    "@instructure/ui-pagination": "^8.14.0",
+    "@instructure/ui-pill": "^8.14.0",
+    "@instructure/ui-popover": "^8.14.0",
+    "@instructure/ui-position": "^8.14.0",
+    "@instructure/ui-progress": "^8.14.0",
+    "@instructure/ui-radio-input": "^8.14.0",
+    "@instructure/ui-range-input": "^8.14.0",
+    "@instructure/ui-rating": "^8.14.0",
+    "@instructure/ui-responsive": "^8.14.0",
+    "@instructure/ui-select": "^8.14.0",
+    "@instructure/ui-selectable": "^8.14.0",
+    "@instructure/ui-simple-select": "^8.14.0",
+    "@instructure/ui-spinner": "^8.14.0",
+    "@instructure/ui-svg-images": "^8.14.0",
+    "@instructure/ui-table": "^8.14.0",
+    "@instructure/ui-tabs": "^8.14.0",
+    "@instructure/ui-tag": "^8.14.0",
+    "@instructure/ui-text": "^8.14.0",
+    "@instructure/ui-text-area": "^8.14.0",
+    "@instructure/ui-text-input": "^8.14.0",
+    "@instructure/ui-themes": "^8.14.0",
+    "@instructure/ui-time-select": "^8.14.0",
+    "@instructure/ui-toggle-details": "^8.14.0",
+    "@instructure/ui-tooltip": "^8.14.0",
+    "@instructure/ui-tray": "^8.14.0",
+    "@instructure/ui-tree-browser": "^8.14.0",
+    "@instructure/ui-truncate-text": "^8.14.0",
+    "@instructure/ui-view": "^8.14.0",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
