add newest instui snapshot, everything seem to work now

--- a/package.json
+++ b/package.json
@@ -1,70 +1,71 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next/cache && next dev",
     "build": "next build",
     "start": "next start",
     "static": "yarn build && next export"
   },
   "dependencies": {
-    "@instructure/emotion": "^8.14.0",
-    "@instructure/ui-alerts": "^8.14.0",
-    "@instructure/ui-avatar": "^8.14.0",
-    "@instructure/ui-badge": "^8.14.0",
-    "@instructure/ui-billboard": "^8.14.0",
-    "@instructure/ui-breadcrumb": "^8.14.0",
-    "@instructure/ui-buttons": "^8.14.0",
-    "@instructure/ui-byline": "^8.14.0",
-    "@instructure/ui-calendar": "^8.14.0",
-    "@instructure/ui-checkbox": "^8.14.0",
-    "@instructure/ui-date-input": "^8.14.0",
-    "@instructure/ui-date-time-input": "^8.14.0",
-    "@instructure/ui-drawer-layout": "^8.14.0",
-    "@instructure/ui-editable": "^8.14.0",
-    "@instructure/ui-file-drop": "^8.14.0",
-    "@instructure/ui-flex": "^8.14.0",
-    "@instructure/ui-form-field": "^8.14.0",
-    "@instructure/ui-grid": "^8.14.0",
-    "@instructure/ui-heading": "^8.14.0",
-    "@instructure/ui-icons": "^8.14.0",
-    "@instructure/ui-img": "^8.14.0",
-    "@instructure/ui-link": "^8.14.0",
-    "@instructure/ui-list": "^8.14.0",
-    "@instructure/ui-menu": "^8.14.0",
-    "@instructure/ui-metric": "^8.14.0",
-    "@instructure/ui-modal": "^8.14.0",
-    "@instructure/ui-navigation": "^8.14.0",
-    "@instructure/ui-number-input": "^8.14.0",
-    "@instructure/ui-options": "^8.14.0",
-    "@instructure/ui-overlays": "^8.14.0",
-    "@instructure/ui-pagination": "^8.14.0",
-    "@instructure/ui-pill": "^8.14.0",
-    "@instructure/ui-popover": "^8.14.0",
-    "@instructure/ui-position": "^8.14.0",
-    "@instructure/ui-progress": "^8.14.0",
-    "@instructure/ui-radio-input": "^8.14.0",
-    "@instructure/ui-range-input": "^8.14.0",
-    "@instructure/ui-rating": "^8.14.0",
-    "@instructure/ui-responsive": "^8.14.0",
-    "@instructure/ui-select": "^8.14.0",
-    "@instructure/ui-selectable": "^8.14.0",
-    "@instructure/ui-simple-select": "^8.14.0",
-    "@instructure/ui-spinner": "^8.14.0",
-    "@instructure/ui-svg-images": "^8.14.0",
-    "@instructure/ui-table": "^8.14.0",
-    "@instructure/ui-tabs": "^8.14.0",
-    "@instructure/ui-tag": "^8.14.0",
-    "@instructure/ui-text": "^8.14.0",
-    "@instructure/ui-text-area": "^8.14.0",
-    "@instructure/ui-text-input": "^8.14.0",
-    "@instructure/ui-themes": "^8.14.0",
-    "@instructure/ui-time-select": "^8.14.0",
-    "@instructure/ui-toggle-details": "^8.14.0",
-    "@instructure/ui-tooltip": "^8.14.0",
-    "@instructure/ui-tray": "^8.14.0",
-    "@instructure/ui-tree-browser": "^8.14.0",
-    "@instructure/ui-truncate-text": "^8.14.0",
-    "@instructure/ui-view": "^8.14.0",
+    "@instructure/emotion": "8.17.1-snapshot.18",
+    "@instructure/ui-alerts": "8.17.1-snapshot.18",
+    "@instructure/ui-avatar": "8.17.1-snapshot.18",
+    "@instructure/ui-badge": "8.17.1-snapshot.18",
+    "@instructure/ui-billboard": "8.17.1-snapshot.18",
+    "@instructure/ui-breadcrumb": "8.17.1-snapshot.18",
+    "@instructure/ui-buttons": "8.17.1-snapshot.18",
+    "@instructure/ui-byline": "8.17.1-snapshot.18",
+    "@instructure/ui-calendar": "8.17.1-snapshot.18",
+    "@instructure/ui-checkbox": "8.17.1-snapshot.18",
+    "@instructure/ui-date-input": "8.17.1-snapshot.18",
+    "@instructure/ui-date-time-input": "8.17.1-snapshot.18",
+    "@instructure/ui-drawer-layout": "8.17.1-snapshot.18",
+    "@instructure/ui-editable": "8.17.1-snapshot.18",
+    "@instructure/ui-file-drop": "8.17.1-snapshot.18",
+    "@instructure/ui-flex": "8.17.1-snapshot.18",
+    "@instructure/ui-form-field": "8.17.1-snapshot.18",
+    "@instructure/ui-grid": "8.17.1-snapshot.18",
+    "@instructure/ui-heading": "8.17.1-snapshot.18",
+    "@instructure/ui-icons": "8.17.1-snapshot.18",
+    "@instructure/ui-img": "8.17.1-snapshot.18",
+    "@instructure/ui-link": "8.17.1-snapshot.18",
+    "@instructure/ui-list": "8.17.1-snapshot.18",
+    "@instructure/ui-menu": "8.17.1-snapshot.18",
+    "@instructure/ui-metric": "8.17.1-snapshot.18",
+    "@instructure/ui-modal": "8.17.1-snapshot.18",
+    "@instructure/ui-navigation": "8.17.1-snapshot.18",
+    "@instructure/ui-number-input": "8.17.1-snapshot.18",
+    "@instructure/ui-options": "8.17.1-snapshot.18",
+    "@instructure/ui-overlays": "8.17.1-snapshot.18",
+    "@instructure/ui-pagination": "8.17.1-snapshot.18",
+    "@instructure/ui-pill": "8.17.1-snapshot.18",
+    "@instructure/ui-popover": "8.17.1-snapshot.18",
+    "@instructure/ui-position": "8.17.1-snapshot.18",
+    "@instructure/ui-progress": "8.17.1-snapshot.18",
+    "@instructure/ui-radio-input": "8.17.1-snapshot.18",
+    "@instructure/ui-range-input": "8.17.1-snapshot.18",
+    "@instructure/ui-rating": "8.17.1-snapshot.18",
+    "@instructure/ui-responsive": "8.17.1-snapshot.18",
+    "@instructure/ui-select": "8.17.1-snapshot.18",
+    "@instructure/ui-selectable": "8.17.1-snapshot.18",
+    "@instructure/ui-simple-select": "8.17.1-snapshot.18",
+    "@instructure/ui-spinner": "8.17.1-snapshot.18",
+    "@instructure/ui-svg-images": "8.17.1-snapshot.18",
+    "@instructure/ui-table": "8.17.1-snapshot.18",
+    "@instructure/ui-tabs": "8.17.1-snapshot.18",
+    "@instructure/ui-tag": "8.17.1-snapshot.18",
+    "@instructure/ui-text": "8.17.1-snapshot.18",
+    "@instructure/ui-text-area": "8.17.1-snapshot.18",
+    "@instructure/ui-text-input": "8.17.1-snapshot.18",
+    "@instructure/ui-themes": "8.17.1-snapshot.18",
+    "@instructure/ui-time-select": "8.17.1-snapshot.18",
+    "@instructure/ui-toggle-details": "8.17.1-snapshot.18",
+    "@instructure/ui-tooltip": "8.17.1-snapshot.18",
+    "@instructure/ui-tray": "8.17.1-snapshot.18",
+    "@instructure/ui-tree-browser": "8.17.1-snapshot.18",
+    "@instructure/ui-truncate-text": "8.17.1-snapshot.18",
+    "@instructure/ui-view": "8.17.1-snapshot.18",
+    "@instructure/ui-code-editor": "8.17.1-snapshot.18",
     "moment": "^2.29.1",
     "next": "latest",
     "react": "17.0.2",
